--- a/Ext.Net.UX/Ext.Net.UX.csproj
+++ b/Ext.Net.UX/Ext.Net.UX.csproj
@@ -36,10 +36,10 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Ext.Net.Utilities">
-      <HintPath>packages\Ext.NET.Utilities.2.0.0\lib\Ext.Net.Utilities.dll</HintPath>
+      <HintPath>..\packages\Ext.NET.Utilities.2.0.0\lib\Ext.Net.Utilities.dll</HintPath>
     </Reference>
     <Reference Include="Newtonsoft.Json">
-      <HintPath>packages\Newtonsoft.Json.4.0.8\lib\net35\Newtonsoft.Json.dll</HintPath>
+      <HintPath>..\packages\Newtonsoft.Json.4.0.8\lib\net35\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.configuration" />
