--- a/Ext.Net.UX/Ext.Net.UX.csproj
+++ b/Ext.Net.UX/Ext.Net.UX.csproj
@@ -10,7 +10,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Ext.Net.UX</RootNamespace>
     <AssemblyName>Ext.Net.UX</AssemblyName>
-    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>Properties\Ext.Net.UX.snk</AssemblyOriginatorKeyFile>
@@ -35,11 +35,14 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Ext.Net">
+      <HintPath>..\packages\Ext.NET.2.0.0-beta\lib\Ext.Net.dll</HintPath>
+    </Reference>
     <Reference Include="Ext.Net.Utilities">
       <HintPath>..\packages\Ext.NET.Utilities.2.0.0\lib\Ext.Net.Utilities.dll</HintPath>
     </Reference>
     <Reference Include="Newtonsoft.Json">
-      <HintPath>..\packages\Newtonsoft.Json.4.0.8\lib\net35\Newtonsoft.Json.dll</HintPath>
+      <HintPath>..\packages\Newtonsoft.Json.4.0.8\lib\net40\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.configuration" />
@@ -54,6 +57,9 @@
     </Reference>
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
+    <Reference Include="Transformer.NET">
+      <HintPath>..\packages\Transformer.NET.2.0.0\lib\Transformer.NET.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Extensions\GMapPanel\CenterMarker.cs" />
@@ -85,10 +91,15 @@
     <EmbeddedResource Include="Build\Resources\ToolboxIcons\Plugin.bmp" />
     <EmbeddedResource Include="Extensions\GMapPanel\GMapPanel.bmp" />
     <EmbeddedResource Include="Plugins\InputTextMask\InputTextMask.bmp" />
+    <Content Include="App_Readme\Ext.NET.CHANGELOG.txt" />
+    <Content Include="App_Readme\Ext.NET.LICENSE.txt" />
+    <Content Include="App_Readme\Ext.NET.README.txt" />
     <Content Include="App_Readme\Ext.NET.Utilities.LICENSE.txt" />
     <Content Include="App_Readme\Ext.NET.Utilities.README.txt" />
-    <Content Include="Build\ReferenceAssemblies\README.txt" />
+    <Content Include="App_Readme\Transformer.NET.LICENSE.txt" />
+    <Content Include="App_Readme\Transformer.NET.README.txt" />
     <Content Include="Build\Resources\Templates\Copyright - LGPL3.txt" />
+    <Content Include="Ext.NET.Default.aspx" />
     <Content Include="Extensions\GMapPanel\LICENSE.txt" />
     <Content Include="Extensions\GMapPanel\README.txt" />
     <Content Include="Factory\ext.net.ux.meta.xml" />
@@ -96,12 +107,6 @@
     <Content Include="Plugins\InputTextMask\LICENSE.txt" />
     <Content Include="Plugins\InputTextMask\README.txt" />
     <Content Include="README.txt" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Ext.Net\Ext.Net.csproj">
-      <Project>{195F2E70-F5E6-4A61-AAD9-2639657C29C4}</Project>
-      <Name>Ext.Net</Name>
-    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
